<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=20] -->
    <string name="app_name">Book Store</string>

    <!-- Content description for empty book list [CHAR LIMIT=NONE] -->
    <string name="no_books">No books have been added</string>

    <!-- Title for empty book list [CHAR LIMIT=NONE] -->
    <string name="empty_inventory">The Book Store list is empty</string>

    <!-- Subtitle for empty book list [CHAR LIMIT=NONE] -->
    <string name="add_new_book_empty">Get started by adding a book</string>

    <!-- Hint for adding a book name [CHAR LIMIT=35] -->
    <string name="book_name_hint">Book name*</string>

    <!-- Text hint for adding the quantity of books available [CHAR LIMIT=35] -->
    <string name="book_quantity_hint">Quantity of books available*</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=35] -->
    <string name="book_price_hint">Price*</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=35] -->
    <string name="book_supplier_name_hint">Supplier name*</string>

    <!-- Text hint for supplier phone number field [CHAR LIMIT=35] -->
    <string name="book_supplier_phone_number_hint">Supplier phone number*</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=20] -->
    <string name="call_supplier">Call supplier</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=10] -->
    <string name="save_button">Save</string>

    <!-- Toast message for when there are no more books available in stock [CHAR LIMIT=NONE] -->
    <string name="product_not_in_stock">This product is currently not in stock</string>

    <!-- Toast message for when the user click the sell icon [CHAR LIMIT=NONE] -->
    <string name="product_sold">This book has been sold</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="delete_book_success">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="delete_book_fail">Error with deleting this book</string>

    <!-- Message to ask the user to confirm they want to delete the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Are you sure you want to delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Text to enable the user to cancel the deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Message when the user attempts to exit editing without saving [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Are you sure you want to discard your changes?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep editing</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="new_book_fail">Error with saving new book</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="new_book_success">New book saved</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="book_update_fail">Error with updating book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="book_update_success">Book updated</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="add_book">Add new book</string>

    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="edit_book">Edit book</string>

</resources>