<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".CatalogActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_inventory_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/no_books"
            android:src="@drawable/empty_book_list" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_inventory_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="15dp"
            android:text="@string/empty_inventory"
            android:textSize="15sp"
            app:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="15dp"
            android:text="@string/add_new_book_empty"
            android:textSize="15sp"
            app:fontFamily="sans-serif" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:src="@drawable/plus"
        app:backgroundTint="#ffffff" />

</RelativeLayout>